--- a/styles.css
+++ b/styles.css
@@ -1,95 +1,319 @@
-html, body{
-    min-width: 290px;
-    color: #4d4e53;
-    background-color: #ffffff;
-    font-family:sans-serif;
-    line-height: 1.5;
+@media screen and (max-width:768px) {
+
+    body{
+        font-size: 16px;
+    }
+    
 }
 
-#navbar{
-    position: fixed;
-    min-width: 290px;
-    top: 0px;
-    left: 0px;
-    width: 300px;
-    height: 100%;
-    border-right: solid;
-    border-color: rgba(0,22,22,0.4)
-}
 
-header{
-    color: black;
-    margin: 10px;
-    text-align: center;
-    font-family: sans-serif;
-    font-weight: thin;
-}
+:root{
 
-#main-doc header{
-    text-align: left;
-    margin: 0px;
 
-}
+    background: #1a3d40;
 
-#navbar ul{
-    height: 88%;
-    padding: 0;
-    overflow-y: auto;
-    overflow-x: hidden;
-
-}
-
-#navbar li{
-    color: #4d4e53;
-    border-top: 1px solid;
-    list-style: none;
-    position: relative;
-    width: 100%;
-}
-
-#navbar a{
-    display: block;
-    padding: 10px 30px;
-    color: #4d4e53;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-#main-doc{
-    position: absolute;
-    margin-left: 310px;
-    padding: 20px;
-    margin-bottom: 110px;
-}
-
-section article{
-    color: #4d4e53;
-    margin: 15px;
-    font-size: 0.96rem;
-}
-
-code{
-    display: block;
-    text-align: left;
-    white-space: pre-line;
-    position: relative;
-    word-break: normal;
-    word-wrap: normal;
-    line-height: 2;
-    background-color: #f7f7f7;
-    padding: 15px;
-    margin: 10px;
-    border-radius: 5px;
-}
-
-@media only screen and (max-width: 815px){
-
-    #navbar ul{
-        border: 1px solid;
-        height: 207px;
+    /*Resetar margenes y padding*/
+    *{
+        margin: 0;
+        padding: 0;
     }
 
+    
+    /*para utilizar más adelante box-sizing*/
+    *, 
+    *::before, 
+    *::after{
+        box-sizing: inherit;
+    }
 
+    html{
+        font-size: 62.5%;
+        scroll-behavior: smooth;
+        
+    }
+
+    /*1200PX */
+    @media (max-width: 75em){
+        html{
+            font-size: 60%;
+        }
+    }
+
+    /*980PX*/
+    @media (max-width: 61.25em){
+        html{
+            font-size: 58%;
+        }
+    }    
+
+    /*460*/
+    @media (max-width: 28.75em){
+        html{
+            font-size: 55%;
+        }
+    }
+
+    /*Estilos base*/
+    body{
+
+        font-family: 'Poppins', sans-serif;
+        font-size: 1.8rem;
+        font-weight: 400;
+        line-height: 1.4;
+        color: #fff;
+    }
+    
+    h1,h2{
+        font-family: 'Raleway', sans-serif;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    h1{
+        font-size: 6rem;
+    }
+
+    h2{
+        font-size: 4.2rem;
+    }
+
+    ul{
+       list-style: none;
+    }
+
+    a{
+        text-decoration: none;
+        color: rgb(255,255,255);
+    }
+
+    img{
+        display: block;
+        width: 100%;
+    }
+
+    /*Barra de Navegación*/
+
+    .nav{
+        display: flex;
+        justify-content: flex-end;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background: #880000;
+        box-shadow: 0 2px 0 rgba(0,0,0,0);
+        z-index: 10;
+    }
+
+    .nav-list{
+        display: flex;
+        margin-right: 2rem;
+    }
+
+    @media (max-width: 28.75em){
+        .nav{
+            justify-content: center;
+        }
+
+        .nav-list{
+            margin: 0 1rem;
+        }
+
+    }
+
+    .nav-list a{
+        display: block;
+        font-size: 2.2rem;
+        padding: 2rem;
+    }
+
+    .navlist a:hover{
+        background: #0000AA;
+    }
+
+    /*Sección de Bienvenida*/
+    .welcome-section{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100vh;
+        background-color: #000;
+        background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+    }
+
+    .welcome-section > p{
+        font-size: 3rem;
+        font-weight: 200;
+        font-style: italic;
+        color: #880000;
+    }
+
+    /* Sección de proyectos */
+
+    .projects-section{
+        text-align: center;
+        padding: 10rem 2rem;
+        background: #1a3d40;
+    }
+
+    .projects-section-header{
+        max-width: 640px;
+        margin: 0 auto 6rem auto;
+        border-bottom: 0.2 solid #fff;
+    }
+
+    @media(max-width: 28.75em){
+        projects-section-header{
+            font-size: 4rem;
+        }
+    }
+
+    /* Grid para configurar las imagenes*/
+    .projects-grid{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(320px,1fr));
+        grid-gap: 4rem;
+        width: 100%;
+        max-width: 1280px;
+        margin: 0 auto;
+        margin-bottom: 6rem;
+    }
+
+    @media(max-width: 30.635rem){
+        .projects-section{
+            padding: 6rem 1rem;
+        }
+
+        .projects-grid{
+            grid-template-columns: 1fr;
+        }
+
+    }
+
+    .project{
+        background: #3a3d40;
+        box-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+        border-radius: 2px;
+    }
+
+    .code{
+        color: #3a3d40;
+        transition: color 0.3s ease-out;
+    }
+
+    .project:hover .code{
+        color: #ff7f50;
+    }
+
+    .project-image{
+        height: calc(100% - 6.8rem);
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .project-title{
+        font-size: 2rem;
+        padding: 2rem 0.5rem;
+    }
+
+    .btn{
+        display: inline-block;
+        padding: 1rem 2rem;
+        border-radius: 2px;
+    }
+
+    .btn-show-all{
+        font-size: 2rem;
+        background: #3a3d40;
+        transition: background 0.3s ease-out;
+    }
+
+    .btn-show-all:hover{
+        background: #880000;
+    }
+
+    .btn-show-all:hover >i{
+        transform: translateX(2px);
+    }
+
+    .btn-show-all > i{
+        margin-left: 10px;
+        transform: translateX(0);
+        transition: transform 0.3s ease-out;
+    }
+    /*Sección de contacto*/
+
+    .contact-section{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        height: 80vh;
+        padding: 0 2rem;
+        background:#1a3d40;
+    }
+
+    .contact-section-header > h2{
+        font-size: 6rem;
+    }
+
+    @media(max-width: 28.75em){
+        .contact-section-header > h2{
+            font-size: 4rem;
+        }
+    
+    }
+
+    .contact-section-header > p{
+        font-style: italic;
+    }
+
+    .contact-links{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        max-width: 980px;
+        margin-top: 4rem;
+        flex-wrap: wrap;
+    }
+
+    .contact-details{
+        font-size: 2.4rem;
+        text-shadow: 2px 2px 1px #1f1f1f;
+        transition: transform 0.3 ease-out;
+    }
+
+    .contact-details:hover{
+        transform: translateY(8px);
+    }
+
+    footer{
+        font-weight: 300;
+        display: flex;
+        justify-content: space-evenly;
+        padding: 2rem;
+        background: #1a3d40;
+    }
+
+    footer > p {
+        margin: 2rem;
+    }
+
+    footer i{
+        vertical-align: middle;
+    }
+
+    @media(max-width: 28.75em){
+        footer {
+            flex-direction: column;
+            text-align: center;
+        }
+    }
+
+    
 
 }
-
